--- a/css/ui.css
+++ b/css/ui.css
@@ -1,44 +1,230 @@
 body{
-    background-color: #7191c6;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
-#container div{
-    border-radius: 15px;
-    margin: 5px;
-    font-family: "futura-pt-condensed", sans-serif; font-weight: 600;
+.row{
+    width: 100%
 }
 #drawpanel{
     float: left;
     background-color:white;
 }
 #chatpanel{
-    float:left;
     background-color:white;
-    padding: 5px;
-    width: 250px;
-    height: 700px;
+    width: 300px;
+    float: left;
+    padding: 10px;
+}
+#chatcontent{
+    float: top;
+    overflow:auto;
+    display: inline-block;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    min-width: 300px;
+    max-height: 600px;
+    min-height: 600px;
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; 
     
+}
+canvas{
+    border-color: #3b5998;
+    border-style: solid;
+    border-width: 5px;
 }
 #chatcontrol{
     height:8%;
 }
-#chatcontent{
-    height: 92%;
-    float:top;
-    overflow:auto;
-    word-wrap: break-word;
+#favcolor{
+    display: none
 }
-#users{
-    background-color:white;
-    padding: 5px;
-    border-collapse:collapse;
-    display : table;
-    float:left;
-    width: 200px;
-    height:100%;
+#slider{
+    padding: 8px 0;
 }
-#users div{
-    background-color: #B0E0E6;
-    padding: 5px;
-    font-size: 20px;
+.modal-backdrop{
+    z-index: 0;
+}
+/*
+    DEMO STYLE
+*/
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: rgb(75, 75, 75);
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; 
+}
+
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    background: #ebebeb;
+    color: rgb(75, 75, 75);
+    transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+    transform-origin: bottom left;
+    height: 100%;
+    float: left;
+}
+
+#sidebar.active {
+    margin-left: -250px;
+    transform: rotateY(100deg);
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background:#3b5998;
+    color: white;
+}
+
+#sidebar ul.components {
+    padding: 0;
+    margin-bottom: 0;
+}
+
+#sidebar ul p {
+    background: #dadada;
+    color: rgb(75, 75, 75);
+    padding: 10px;
+    margin-bottom: 0px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+#sidebar ul li a:hover {
+    color: rgb(75, 75, 75);
+    background: #ffffff;
+}
+
+#sidebar ul li input {
+    padding: 13px;
+}
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+    color: rgb(75, 75, 75);
+    background: #ebebeb;
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #ebebeb;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
     border-radius: 5px;
+    margin-bottom: 5px;
 }
+
+a.download {
+    background: #fff;
+    color: rgb(75, 75, 75);
+}
+
+a.article, a.article:hover {
+    background: #ebebeb;
+    color: rgb(75, 75, 75);
+}
+
+.custom-range::-webkit-slider-thumb {
+    background: #3b5998;
+  }
+  
+  .custom-range::-moz-range-thumb {
+    background: #3b5998;
+  }
+  
+  .custom-range::-ms-thumb {
+    background: #3b5998;
+  }
+  .btn-primary{
+    background: #3b5998;
+    border-color: #3b5998;
+  }
+  .btn-primary:hover{
+    background: #31497e;
+  }
