--- a/css/ui.css
+++ b/css/ui.css
@@ -6,11 +6,22 @@ body{
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
+    overflow: hidden;
 }
+@media (-webkit-min-device-pixel-ratio: 1.25) {
+    html{
+        zoom: .9
+    }
+}
+.modal-backdrop {
+    width: 100% !important;
+    height: 100% !important;
+  }
 .row{
     width: 100%
 }
 #drawpanel{
+    display: inline;
     float: left;
     background-color:white;
 }
@@ -19,14 +30,14 @@ body{
     width: 300px;
     float: left;
     padding: 10px;
+    display: inline;
 }
 #chatcontent{
     float: top;
     overflow:auto;
-    display: inline-block;
     overflow-wrap: break-word;
     word-wrap: break-word;
-    min-width: 300px;
+    min-width: 100%;
     max-height: 600px;
     min-height: 600px;
     -ms-word-break: break-all;
@@ -59,6 +70,7 @@ canvas{
 .modal-backdrop{
     z-index: 0;
 }
+
 /*
     DEMO STYLE
 */
@@ -97,6 +109,7 @@ a, a:hover, a:focus {
     border-radius: 0;
     margin-bottom: 40px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    display: inline;
 }
 
 .navbar-btn {
@@ -120,7 +133,7 @@ a, a:hover, a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #ebebeb;
+    background: #eeeeee;
     color: rgb(75, 75, 75);
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
@@ -145,7 +158,7 @@ a, a:hover, a:focus {
 }
 
 #sidebar ul p {
-    background: #dadada;
+    background: #dfdfdf;
     color: rgb(75, 75, 75);
     padding: 10px;
     margin-bottom: 0px;
@@ -166,7 +179,7 @@ a, a:hover, a:focus {
 }
 #sidebar ul li.active > a, a[aria-expanded="true"] {
     color: rgb(75, 75, 75);
-    background: #ebebeb;
+    background: #eeeeee;
 }
 
 
@@ -185,7 +198,7 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #ebebeb;
+    background: #eeeeee;
 }
 
 ul.CTAs {
@@ -206,7 +219,7 @@ a.download {
 }
 
 a.article, a.article:hover {
-    background: #ebebeb;
+    background: #eeeeee;
     color: rgb(75, 75, 75);
 }
 
@@ -227,4 +240,5 @@ a.article, a.article:hover {
   }
   .btn-primary:hover{
     background: #31497e;
+    border-color: #3b5998;
   }
