--- a/css/ui.css
+++ b/css/ui.css
@@ -1,3 +1,6 @@
+html{
+    height: 100%;
+}
 body{
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -7,11 +10,7 @@ body{
     -o-user-select: none;
     user-select: none;
     overflow: hidden;
-}
-@media (-webkit-min-device-pixel-ratio: 1.25) {
-    html{
-        zoom: .9
-    }
+    height: 100%;
 }
 .modal-backdrop {
     width: 100% !important;
@@ -27,7 +26,7 @@ body{
 }
 #chatpanel{
     background-color:white;
-    width: 300px;
+    width: 250px;
     float: left;
     padding: 10px;
     display: inline;
@@ -70,7 +69,20 @@ canvas{
 .modal-backdrop{
     z-index: 0;
 }
-
+#users{
+    height: 45%;
+    overflow: scroll;
+    overflow-x: hidden;
+    
+}
+::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
 /*
     DEMO STYLE
 */
@@ -133,7 +145,7 @@ a, a:hover, a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #eeeeee;
+    background: #f5f5f5;
     color: rgb(75, 75, 75);
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
@@ -158,7 +170,7 @@ a, a:hover, a:focus {
 }
 
 #sidebar ul p {
-    background: #dfdfdf;
+    background: #e6e6e6;
     color: rgb(75, 75, 75);
     padding: 10px;
     margin-bottom: 0px;
@@ -179,7 +191,7 @@ a, a:hover, a:focus {
 }
 #sidebar ul li.active > a, a[aria-expanded="true"] {
     color: rgb(75, 75, 75);
-    background: #eeeeee;
+    background: #f5f5f5;
 }
 
 
@@ -198,7 +210,7 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #eeeeee;
+    background: #f5f5f5;
 }
 
 ul.CTAs {
@@ -219,7 +231,7 @@ a.download {
 }
 
 a.article, a.article:hover {
-    background: #eeeeee;
+    background: #f5f5f5;
     color: rgb(75, 75, 75);
 }
 
@@ -242,3 +254,6 @@ a.article, a.article:hover {
     background: #31497e;
     border-color: #3b5998;
   }
+  @media (-webkit-min-device-pixel-ratio: 1.25) {
+    
+}
