--- a/css/index.css
+++ b/css/index.css
@@ -254,23 +254,22 @@ a.article, a.article:hover {
 
 .custom-range::-webkit-slider-thumb {
     background: #3b5998;
-  }
-  
-  .custom-range::-moz-range-thumb {
+}
+
+.custom-range::-moz-range-thumb {
     background: #3b5998;
-  }
-  
-  .custom-range::-ms-thumb {
+}
+
+.custom-range::-ms-thumb {
     background: #3b5998;
-  }
-  .btn-primary{
+}
+.btn-primary{
     background: #3b5998;
     border-color: #3b5998;
-  }
-  .btn-primary:hover{
+}
+.btn-primary:hover{
     background: #31497e;
     border-color: #3b5998;
-  }
-  @media (-webkit-min-device-pixel-ratio: 1.25) {
-    
 }
+
+@media (-webkit-min-device-pixel-ratio: 1.25) {}
